--- a/box/box.css
+++ b/box/box.css
@@ -1,7 +1,9 @@
 .box1{
 	height:300px;
 	width:300px;
-background-color:red;
+    background-color:#FF99CC;
+    padding:30px;
+
 }
 
 .box2{
@@ -9,4 +11,5 @@ background-color:red;
 	width:100px;
 	background-color:blue;
 	border: 5px solid yellow;
+
 }
