--- a/caravan/style.css
+++ b/caravan/style.css
@@ -2,7 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color:#6c6b6b;
 }
+
+a{
+	text-decoration:none;
+}
+
 
 .clearfix::after{
 	content:"";
@@ -16,13 +22,24 @@ header{
 	width:90%;
 	padding:15 0;
 	margin:0 auto;
-	
+	text-align:center;
 }
 
 header .headerline{
 	fontsize:32px;
 }
 
+.nav-list{
+    text-align:center;
+    padding:10px ;
+    margin:0 auto;
+}
+
+.nav-list-item{
+	list-style:none;
+	display:inline-block;
+	margin:0 20px;
+}
 .main-visual{
 	width:100%;
 	height:300px;
@@ -58,8 +75,14 @@ header .headerline{
 footer{
 	width:100%;
 	height:120px;
+    text-align: center;
+    line-height:120px;
+    background-color:#848282;
 
-	
-	
+}
+
+.footer-text{
+	color:#fff;
+
 }
 
