--- a/caravan/style.css
+++ b/caravan/style.css
@@ -50,9 +50,20 @@ header .headerline{
 }
 
 .main-visual-content{
-	width:350px;
+	width:40%;
 	height:300px;
-	
+	background-color:rgba(0,0,0,0.5);
+	text-align:center;
+	padding-top:105px;
+}
+
+.main-visual-text{
+	color:#fff;
+}
+
+.main-visual-name{
+	color:#fff;
+	margin-top:30px;
 }
 
 .main{
