--- a/caravan/style.css
+++ b/caravan/style.css
@@ -19,9 +19,7 @@ a{
 
 
 header{
-	width:90%;
-	padding:15 0;
-	margin:0 auto;
+	width:100%;
 	text-align:center;
 }
 
@@ -31,7 +29,7 @@ header .headerline{
 
 .nav-list{
     text-align:center;
-    padding:10px ;
+    padding:10px 0 ;
     margin:0 auto;
 }
 
@@ -66,10 +64,10 @@ header .headerline{
 	margin-top:30px;
 }
 
-.main{
+main{
 	width:800px;
-    margin: 0 auto;
-	padding:70px 0;
+    margin: 0 auto ;
+	padding:70px 0 ;
 
 }
 
@@ -86,10 +84,35 @@ header .headerline{
 
 }
 
+.blog-box{
+	padding-top:50px;
+}
+
+
+
 .blog-item{
 	padding-bottom:20px;
 	margin-bottom:20px;
 	border-bottom:1px solid #f7f7f7;
+}
+
+.blog-image{
+	float:left;
+	height:180px;
+}
+
+.blog-text-headline{
+	padding-bottom:15px;
+}
+
+.blog-text{
+	float:left;
+	padding:30px 0 0 25px;
+}
+
+.blog-date{
+    display:inline-block;
+    font-size:12px;
 }
 
 .category{
@@ -110,7 +133,7 @@ footer{
 	width:100%;
 	height:120px;
     text-align: center;
-    line-height:120px;
+    padding:50px 0;
     background-color:#848282;
 
 }
