--- a/caravan/style.css
+++ b/caravan/style.css
@@ -126,6 +126,17 @@ main{
 	font-size:11px;
 }
 
+.pagination p{
+	width:30px;
+	height:30px;
+	text-align:center;
+	display:inline-block;
+	color:white;
+	background-color:#acabab;
+	border-radius:3px;
+	margin:0 5px;
+	line-height:30px;
+}
 .sidebar{
     width:230px;
     float:left;
