--- a/caravan/style.css
+++ b/caravan/style.css
@@ -19,10 +19,23 @@ a{
 
 
 header{
+	position:relative;
 	width:90%;
 	padding:15px 0;
 	margin:0 auto;
 	text-align:center;
+}
+
+.social{
+	position:absolute;
+	top:22px;
+	right:22px;
+}
+
+
+.social i{
+	display:inline-block;
+	margin-left:20px;
 }
 
 header .headerline{
