--- a/caravan/style.css
+++ b/caravan/style.css
@@ -17,6 +17,11 @@ a{
 
 }
 
+header, nav, h2, .main-visual, footer {
+  font-family: Chalkduster, "Bradley Hand", Courier, "Segoe Print", sans-serif;
+
+}
+
 
 header{
 	position:relative;
